--- a/musik.html
+++ b/musik.html
@@ -95,7 +95,7 @@
                         <div class="row">
                             <div class="col-md-4">
 
-                                <img src="images/2016-05-31%2021.05.02.png" class="artikelbild img-responsive">
+                                <img src="images/2016-05-31%2021.05.02.jpg" class="artikelbild img-responsive">
                             </div>
 
                             <div class="col-md-8">
@@ -147,7 +147,7 @@
                         <div class="row">
                             <div class="col-md-4">
 
-                                <img src="images/2016-03-08%2020.56.01.jpg" class="artikelbild img-responsive">
+                                <img src="images/2016-03-08%2020-56-01.jpg" class="artikelbild img-responsive">
                             </div>
 
                             <div class="col-md-8">
