--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico">
 
-    <title>Jan M...usic</title>
+    <title>JMusic</title>
 
     <!-- Bootstrap Haupt-CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -49,6 +49,7 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="https://www.youtube.com/channel/UCnsP3QrIVlQFdbGB-qX1EWQ?disable_polymer=true">Youtube</a></li>
+                      <li><a href="https://www.instagram.com/jmusic.yt/">Instagram</a></li>
                     <li><a href="musik.html">Musik</a></li>
                     <li><a href="ueber-mich.html">Über mich</a></li>
                     <li><a href="galerie.html">Galerie</a></li>
@@ -78,7 +79,7 @@
       
 
             <center>
-                <h1 class="Überschrift">JAN M...USIC</h1>
+                <h1 class="Überschrift">JMUSIC</h1>
                 <hr/>
             </center>
         </div>
@@ -135,12 +136,11 @@
         <br/>
         <center>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/7h-yIFYLNjg" frameborder="0" allowfullscreen class="video"></iframe>
-
-
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/wBGHWSlT7xU" frameborder="0" allowfullscreen class="video"></iframe>
-
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SLvJHwTT8wU" frameborder="0" allowfullscreen></iframe>
+<br/><br/>
+<br/>
+            
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/612DftCPUuc" frameborder="0" allowfullscreen></iframe>
         </center>
 
 
