--- a/kontakt.html
+++ b/kontakt.html
@@ -49,6 +49,7 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="https://www.youtube.com/channel/UCnsP3QrIVlQFdbGB-qX1EWQ?disable_polymer=true">Youtube</a></li>
+                     <li><a href="https://www.instagram.com/jmusic.yt/">Instagram</a></li>
                     <li><a href="musik.html">Musik</a></li>
                     <li><a href="ueber-mich.html">Über mich</a></li>
                     <li><a href="galerie.html">Galerie</a></li>
