--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -44,6 +44,7 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="https://www.youtube.com/channel/UCnsP3QrIVlQFdbGB-qX1EWQ?disable_polymer=true">Youtube</a></li>
+                     <li><a href="https://www.instagram.com/jmusic.yt/">Instagram</a></li>
                     <li><a href="musik.html">Musik</a></li>
                     <li><a href="ueber-mich.html">Über mich</a></li>
                     <li><a href="galerie.html">Galerie</a></li>
@@ -69,7 +70,7 @@
 
                             <p class="übermichtext">Ich gehe in die achte Klasse. In meiner Freizeit spiele ich Gitarre und ein bisschen Klavier. Dazu singe ich. Wenn ich ein Lied gut geübt habe, nehme ich es auf und drehe ein Video dazu.Das dauert meistens sehr lange.Wenn ich das Video fertig geschnitten habe, lade ich es auf meinem Youtube-Kanal hoch.Dort lade ich ungefähr jeden Monat ein neues Cover hoch.Ein eigenes Lied habe ich auch.Manchmal lade ich auch andere Videos hoch.In der Schule spiele ich noch in einem Orchester. Ich spiele auch noch Fußball und Tennis. Ich mag eigentlich fast jede Sportart. :)
                                 <br/>
-                                <br/> LG Jan M...usic</p>
+                                <br/> LG JMusic</p>
                         </div>
                         <div class="col-md-4">
                             <img src="images/PhotoGrid_1465504369386.jpg" class="profilbild_image img-responsive">
