--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
 
     <!--  Dokumentkompatibilitätsmodus für IE-->
+    
+    <meta name="google-site-verification" content="cDG4DHpgFr_1cmcmirNqejkeZ03OYiEAnYWXgDboiR0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
